apps/base/miniflux/ingressroute-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: miniflux-internal
  namespace: apps
spec:
  entryPoints:
    - websecure-int
  routes:
    - match: Host(`rss.local.kagiso.me`)
      kind: Rule
      middlewares:
        - name: ingress-secure-headers@kubernetescrd
      services:
        - name: miniflux
          port: 8080
  tls: {}
