apps/base/miniflux/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: miniflux
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rss.kagiso.me`)
      kind: Rule
      services:
        - name: miniflux
          port: 8080
  tls: {}
